--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ body {
   min-width: 1140px;
 }
 
+html {
+  background-color: white;
+}
+
 .wrapper {
   margin-left: auto;
   margin-right: auto;
@@ -335,6 +339,7 @@ body {
 
 .main {
   height: 100vh;
+  background-color: grey;
 }
 
 .overlay {
@@ -345,7 +350,7 @@ body {
 }
 
 .column {
-  height: 100%;
+  height: 100vh;
   background-color: rgba(127, 255, 212, 0.39);
 }
 
@@ -360,6 +365,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 15px;
 }
 
 .header {
@@ -370,32 +376,27 @@ body {
 
 .sidebar {
   background-color: blue;
-  height: 100%;
+  height: calc(100% - 30px);
   color: white;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 .main-content {
   background-color: red;
   color: white;
-  height: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  height: calc(100% - 30px);
 }
 
 .aside {
   background-color: yellow;
   color: black;
-  height: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  height: calc(50% - 23px);
 }
 
 .footer {
-  background-color: orange;
+  background-color: orangered;
   color: black;
   height: 10vh;
+  margin-bottom: 0;
 }
 
 .main-container {
