--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body,
@@ -92,7 +92,7 @@ video {
   vertical-align: baseline;
   text-decoration: none;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 article,
@@ -150,14 +150,12 @@ html {
   body {
     min-width: 780px;
   }
-
   .wrapper {
     margin-left: auto;
     margin-right: auto;
     width: 780px;
     overflow: hidden;
   }
-
   .container_1,
   .container_2,
   .container_3,
@@ -177,51 +175,39 @@ html {
     margin-left: 7.5px;
     margin-right: 7.5px;
   }
-
   .wrapper .container_1 {
     width: 50px;
   }
-
   .wrapper .container_2 {
     width: 115px;
   }
-
   .wrapper .container_3 {
     width: 180px;
   }
-
   .wrapper .container_4 {
     width: 245px;
   }
-
   .wrapper .container_5 {
     width: 310px;
   }
-
   .wrapper .container_6 {
     width: 375px;
   }
-
   .wrapper .container_7 {
     width: 440px;
   }
-
   .wrapper .container_8 {
     width: 505px;
   }
-
   .wrapper .container_9 {
     width: 570px;
   }
-
   .wrapper .container_10 {
     width: 635px;
   }
-
   .wrapper .container_11 {
     width: 700px;
   }
-
   .wrapper .container_12 {
     width: 765px;
   }
@@ -231,55 +217,42 @@ html {
   body {
     min-width: 960px;
   }
-
   .wrapper {
     width: 960px;
   }
-
   .wrapper .container_1 {
     width: 65px;
   }
-
   .wrapper .container_2 {
     width: 145px;
   }
-
   .wrapper .container_3 {
     width: 225px;
   }
-
   .wrapper .container_4 {
     width: 305px;
   }
-
   .wrapper .container_5 {
     width: 385px;
   }
-
   .wrapper .container_6 {
     width: 465px;
   }
-
   .wrapper .container_7 {
     width: 545px;
   }
-
   .wrapper .container_8 {
     width: 625px;
   }
-
   .wrapper .container_9 {
     width: 705px;
   }
-
   .wrapper .container_10 {
     width: 785px;
   }
-
   .wrapper .container_11 {
     width: 865px;
   }
-
   .wrapper .container_12 {
     width: 945px;
   }
@@ -289,11 +262,9 @@ html {
   body {
     min-width: 1140px;
   }
-
   .wrapper {
     width: 1140px;
   }
-
   .container_1,
   .container_2,
   .container_3,
@@ -313,54 +284,51 @@ html {
     margin-left: 7.5px;
     margin-right: 7.5px;
   }
-
   .wrapper .container_1 {
     width: 80px;
   }
-
   .wrapper .container_2 {
     width: 175px;
   }
-
   .wrapper .container_3 {
     width: 270px;
   }
-
   .wrapper .container_4 {
     width: 365px;
   }
-
   .wrapper .container_5 {
     width: 460px;
   }
-
   .wrapper .container_6 {
     width: 555px;
   }
-
   .wrapper .container_7 {
     width: 650px;
   }
-
   .wrapper .container_8 {
     width: 745px;
   }
-
   .wrapper .container_9 {
     width: 840px;
   }
-
   .wrapper .container_10 {
     width: 935px;
   }
-
   .wrapper .container_11 {
     width: 1030px;
   }
-
   .wrapper .container_12 {
     width: 1125px;
   }
+}
+
+.noGutter {
+  margin: 0;
+}
+
+.fixedNavbar {
+  position: fixed;
+  top: 0;
 }
 
 .main {
@@ -386,14 +354,14 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 15px;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .section > h1 {
@@ -449,10 +417,10 @@ html {
     cursor: pointer;
     padding: 5px;
   }
-
   .toggle:hover {
     background-color: blanchedalmond;
     color: #363636;
     border: 1px solid hotpink;
   }
 }
+/*# sourceMappingURL=style.css.map */
