--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -1,9 +1,9 @@
 body {
+  overflow: hidden;
   line-height: 1;
-}
-
-html {
-  background-color: white;
+  height: 100vh;
+  background-size: cover;
+  background-image: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
 }
 
 @media only screen and (min-width: 760px) {
