--- a/css/style.css
+++ b/css/style.css
@@ -139,11 +139,11 @@ table {
 }
 
 body {
+  overflow: hidden;
   line-height: 1;
-}
-
-html {
-  background-color: white;
+  height: 100vh;
+  background-size: cover;
+  background-image: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
 }
 
 @media only screen and (min-width: 760px) {
@@ -326,14 +326,83 @@ html {
   margin: 0;
 }
 
+.spacer {
+  color: transparent;
+  height: 10vh;
+}
+
+.contentMargin {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid red;
+  height: 40vh;
+}
+
+.search {
+  width: calc(60% - 90px);
+  height: 40px;
+}
+
+a {
+  color: white;
+}
+
+a::after {
+  color: white;
+}
+
+.floatRight {
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+li {
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 12px;
+}
+
+.content2 {
+  padding-top: 24px;
+}
+
 .fixedNavbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: fixed;
   top: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.icons {
+  width: 30px;
+}
+
+.icons2 {
+  padding-top: 5px;
+  width: 20px;
+}
+
+.icons3 {
+  width: 140px;
 }
 
 .main {
   height: 100vh;
-  background-color: grey;
 }
 
 .overlay {
@@ -369,10 +438,11 @@ html {
 }
 
 .header {
-  background-color: green;
+  z-index: 1;
   height: 10vh;
   color: white;
   padding: 20px;
+  border: 2px solid green;
 }
 
 .sidebar {
@@ -382,30 +452,70 @@ html {
   padding: 20px;
 }
 
-.main-content {
-  background-color: red;
-  color: white;
-  height: calc(100% - 30px);
-  padding: 20px;
-}
-
 .aside {
-  background-color: yellow;
-  color: black;
-  height: calc(50% - 23px);
-  padding: 20px;
+  color: white;
+  border: 2px solid rebeccapurple;
+  height: 14vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer {
-  background-color: orangered;
+  background-color: #383838;
+  border: 2px solid orangered;
   color: white;
-  height: 10vh;
-  margin-bottom: 0;
-  padding: 20px;
+  height: 6vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#sticky {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .main-container {
   height: 80vh;
+}
+
+.customButton {
+  margin: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 2px;
+  width: 35px;
+  height: 35px;
+  background-color: rgba(0, 0, 0, 0.411);
+}
+
+.customButton2 {
+  margin: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 2px;
+  width: 70px;
+  height: 35px;
+  background-color: rgba(0, 0, 0, 0.411);
 }
 
 @media only screen and (min-width: 760px) {
